@@ -23,6 +23,8 @@ typedef struct {
 
 #define PyPARSE_DONT_IMPLY_DEDENT	0x0002
 
+#define PyPARSE_WITH_IS_KEYWORD		0x0003
+
 PyAPI_FUNC(node *) PyParser_ParseString(const char *, grammar *, int,
                                               perrdetail *);
 PyAPI_FUNC(node *) PyParser_ParseFile (FILE *, const char *, grammar *, int,
